contact-us spacing issue

--- a/src/components/home-contactus/sass/_contactus.scss
+++ b/src/components/home-contactus/sass/_contactus.scss
@@ -71,7 +71,8 @@
         //padding-bottom: 20px;
     }
     .contactus-sub-header {
-        padding-bottom: 20px;
+        padding-bottom: 30px;
+        margin-top: -5px;
     }
     .contactus-header-desc {
         padding-bottom: 20px;
